fixed mobile content issue, content-box had overflow: hidden

--- a/resources/css/styles.styl
+++ b/resources/css/styles.styl
@@ -253,7 +253,7 @@ html, body
 
 .content-box
   height: 100%
-  overflow: hidden
+  //overflow: hidden
   transform: translateY(105%)
   animation: 1s slideUpContentOnLoad
   animation-delay: 1s
